--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
   <body>
     <h1>Table template</h1>
     <table>
+      <tr>
         <td>Hi, I'm your first cell.</td>
         <td>I'm your second cell.</td>
         <td>I'm your third cell.</td>
         <td>I'm your fourth cell.</td>
+        <tr>
+        <td>Second row, first cell</td>
+        <td>Cell 2</td>
+        <td>Cell 3</td>
+        <td>Cell 4</td>
+    </tr>
+      </tr>
     </table>
   </body>
 </html>
