--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <h1>School timetable</h1>
 
     <table>
+        <caption>Language Teacher's Timetable</caption>
         <colgroup>
             <col />
             <col />
