--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
   <body>
     <h1>Table template</h1>
     <table>
-      <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).</caption>
+      <caption>
+        Data about the planets of our solar system (Planetary facts taken from
+        <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/"
+          >Nasa's Planetary Fact Sheet - Metric</a
+        >).
+      </caption>
+      <colgroup>
+        <col />
+        <col />
+        <col />
+      </colgroup>
       <thead>
         <trow>
+          <td></td>
           <th>Name</th>
           <th>Mass (10<sup>24</sup>kg)</th>
           <th>Diameter (km)</th>
@@ -24,7 +35,63 @@
           <th>Notes</th>
         </trow>
       </thead>
-      <tbody></tbody>
+      <tbody>
+        <tr>
+          <th rowspan="4" colspan="2" scope="rowgroup">Terrestial Planets</th>
+          <th scope="row">Mercury</th>
+          <td>0.330</td>
+          <td>4,879</td>
+          <td>5427</td>
+          <td>3.7</td>
+          <td>4222.6</td>
+          <td>57.9</td>
+          <td>167</td>
+          <td>0</td>
+          <td>Closest to the Sun</td>
+        </tr>
+        <tr>
+          <th scope="row">Venus</th>
+          <td>4.87</td>
+          <td>12,104</td>
+          <td>5243</td>
+          <td>8.9</td>
+          <td>2802.0</td>
+          <td>108.2</td>
+          <td>464</td>
+          <td>0</td>
+          <td>Hotter than Mercury</td>
+        </tr>
+        <tr>
+          <th scope="row">Earth</th>
+          <td>5.97</td>
+          <td>12,756</td>
+          <td>5514</td>
+          <td>9.8</td>
+          <td>24.0</td>
+          <td>149.6</td>
+          <td>15</td>
+          <td>1</td>
+          <td>Our world</td>
+        </tr>
+        <tr>
+          <th scope="row">Mars</th>
+          <td>0.642</td>
+          <td>6,792</td>
+          <td>3933</td>
+          <td>3.7</td>
+          <td>24.7</td>
+          <td>227.9</td>
+          <td>-65</td>
+          <td>2</td>
+          <td>The red planet</td>
+        </tr>
+        <tr>
+          <th rowspan="4">Jovian Planets</th>
+        </tr>
+        <tr>
+          <th>Dwarf Planets</th>
+        </tr>
+      </tbody>
     </table>
   </body>
 </html>
